--- a/package.json
+++ b/package.json
@@ -3,11 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@progress/kendo-drawing": "^1.16.2",
+    "@progress/kendo-licensing": "^1.2.2",
+    "@progress/kendo-react-charts": "^5.0.1",
+    "@progress/kendo-react-dateinputs": "^5.0.1",
+    "@progress/kendo-react-intl": "^5.0.1",
+    "@progress/kendo-theme-default": "^5.1.1",
+    "@progress/kendo-theme-material": "^5.1.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.33.0",
+    "hammerjs": "^2.0.8",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "^5.1.0",
+    "react-promise-tracker": "^2.1.0",
+    "react-range": "^1.8.12",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -34,5 +48,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.18"
   }
 }
